gateway-elb/apps/hubble-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hublle-https-route
  namespace: gateways
spec:
  parentRefs:
  - name: cluster-gw
    namespace: gateways
    sectionName: web-ls-tls
  hostnames:
    - hublle.cluster-hybrid.ddnsfree.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
